<resources>
    <string name="app_name">Teacher Online Course</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="regiser">Register</string>
    <string name="name">Name</string>
    <string name="success">Success</string>
    <string name="waiting">Waiting...</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="check_internet">Check Internet</string>
    <string name="enter_name">Enter Name</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="failed">Failed</string>
    <string name="students">Students</string>
    <string name="setting">Setting</string>
    <string name="course_name">Course Name</string>
    <string name="cancle">Cancle</string>
    <string name="add">Add</string>
    <string name="chapter_name">Chapter name</string>
    <string name="category_name">Category Name</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="enrol_now">Enrol Now</string>
    <string name="files">Files</string>
    <string name="videos">Videos</string>
    <string name="add_rate">Add Rate</string>
    <string name="add_photo">add photo</string>
    <string name="add_file">add file</string>
    <string name="add_video">add video</string>
    <string name="or">OR</string>
    <string name="not_found">not found</string>
    <string name="unfavorite">Swape right or left to unfavorite</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="describtion">Describtion</string>
    <string name="exams">Exams</string>
    <string name="exam_scors">Exam Scors</string>
    <string name="password_wrong">Password wrong</string>
    <string name="okaddadminemail">Ok,Add admin email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="Enter_Verfication_Code">Enter Verfication Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="wrong_code">Wrong Code</string>
    <string name="emailexist">Email aready exist</string>
    <string name="courses">Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="edit">Edit</string>
    <string name="enter_description">Enter Description</string>
    <string name="forget_password">Forget Password?</string>
    <string name="emailnotexist">Emai not exist</string>
    <string name="enternewpassword">Enter New Password</string>
    <string name="entervideourl">enter video url</string>
    <string name="emailpasswordwrong">email or password  wrong</string>
</resources>
