<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_play_circle_outline_black_24dp"
        android:title="@string/my_courses" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favourite" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>
