<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageButton
            android:id="@+id/add_course_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:scaleType="fitCenter"
            android:layout_margin="5dp"/>

        <com.example.teacheronlinecourse.Fonts.Comfortaa_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addCourseName"
            android:gravity="center"
            android:hint="@string/course_name"
            android:textSize="30sp"
            android:layout_margin="5dp"/>
        <com.example.teacheronlinecourse.Fonts.Comfortaa_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addCoursDescribtion"
            android:gravity="center"
            android:hint="@string/describtion"
            android:textSize="30sp"
            android:layout_margin="5dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:id="@+id/categorySpinner"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
                android:id="@+id/cancleAddCourse"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/orange"
                android:textSize="25sp" />
            <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
                android:id="@+id/uploadCourse"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/orange"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>