<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/addItemContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_photo"
                android:textSize="30sp"
                android:id="@+id/phototext"
                android:layout_gravity="center"
                android:gravity="center"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/addImageRecycler"/>
            <!--        <ImageButton-->
            <!--            android:id="@+id/selectImage"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="449dp"-->
            <!--            android:layout_margin="5dp"-->
            <!--            android:scaleType="fitCenter"-->
            <!--            app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"/>-->

        </androidx.cardview.widget.CardView>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/_addphoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
                android:text="@string/add_photo"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/offwhite"
                />
            <TextView
                android:id="@+id/_addvideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_ondemand_video_black_24dp"
                android:text="@string/add_video"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/offwhite"
                />

            <TextView
                android:id="@+id/_adddfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_attach_file_black_24dp"
                android:text="@string/add_file"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/offwhite" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
                android:id="@+id/cancleupload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/cancle"
                android:textSize="25sp" />

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
                android:id="@+id/upLoadItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/add"
                android:textSize="25sp" />
        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>