<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagebackground"
    tools:context=".Activities.Registration">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerCountainer"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="345dp"
        android:layout_marginBottom="97dp"
        app:srcCompat="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/regiser"
            android:textColor="@color/orange"
            android:textSize="45sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/orange">

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Regular
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/navigationbutoom"
                android:textColorHint="@color/navigationbutoom"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/orange">

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Regular
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/navigationbutoom"
                android:textColorHint="@color/navigationbutoom"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/orange">

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Regular
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/navigationbutoom"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background_withborder"
            android:gravity="center"
            android:onClick="Register"
            android:text="@string/regiser"
            android:textColor="@color/navigationbutoom"
            android:textSize="25sp" />


    </LinearLayout>


</LinearLayout>


</androidx.core.widget.NestedScrollView>