<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/addItemContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/addImageRecycler"/>

        </androidx.cardview.widget.CardView>






            <TextView
                android:id="@+id/_addvideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_ondemand_video_black_24dp"
                android:text="@string/add_video"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/offwhite"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/black"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"
                android:padding="10dp"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/black"
                />

        </LinearLayout>


        <com.example.teacheronlinecourse.Fonts.Comfortaa_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/videoUrl"
            android:gravity="center"
            android:hint="Video Url"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_margin="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/offwhite"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
                android:id="@+id/cancleupload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/cancle"
                android:textSize="25sp" />

            <com.example.teacheronlinecourse.Fonts.Comfortaa_Bold
                android:id="@+id/upLoadItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/add"
                android:textSize="25sp" />
        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>